# cmakelib

./: .gitignore  .gitmodules  BIMCM.cmake  BIMCMConfig.cmake  CMLIB.cmake  FindCMLIB.cmake  LICENSE  README.md  version.txt
.github/: ubuntu.yml
example/ARCHIVE/: CMakeLists.txt
example/CACHE/: A_B_C.txt  CMakeLists.txt
example/DEPENDENCY/: CMakeLists.txt
example/DEPENDENCY/boost_example/: CMakeLists.txt  main.cpp
example/DEPENDENCY/cache_control_disabled/: CMakeLists.txt
example/DEPENDENCY/cache_control_enabled/: CMakeLists.txt
example/DEPENDENCY/nlohmann_json_example/: CMakeLists.txt  main.cpp
example/FILE_DOWNLOAD/: CMakeLists.txt
test/: CMakeLists.txt  README.md  TEST.cmake  cache_var.cmake  transform_git_uri.cmake
test/ARCHIVE/: CMakeLists.txt
test/ARCHIVE/archive/: archive.tar.xz  archive_tar  archive_tar.tar.bz2  archive_zip  symlink.tar
test/ARCHIVE/invalid_archive_type_test/: CMakeLists.txt
test/ARCHIVE/invalid_output_var/: CMakeLists.txt
test/CACHE/: CMakeLists.txt  CacheA_B_C.txt  CacheA_NOPATH_DIRECTORY.txt
test/CACHE/cache_directory/: CacheA.txt  CacheB.txt
test/CACHE/cache_keywords_prefix/: CMakeLists.txt
test/COMPONENT/: CMakeLists.txt
test/COMPONENT/not_defined_component/: CMakeLists.txt
test/DEPENDENCY/: CMakeLists.txt  README.md
test/DEPENDENCY/argument_missing/: CMakeLists.txt
test/DEPENDENCY/cache_control/: CMakeLists.txt
test/DEPENDENCY/cache_control/keywords/: CMakeLists.txt
test/DEPENDENCY/cache_control/keywords_same_file_diff_remote/: CMakeLists.txt
test/DEPENDENCY/cache_control/keywords_with_diff_remote/: CMakeLists.txt
test/DEPENDENCY/cache_control/keywords_with_diff_revision/: CMakeLists.txt
test/DEPENDENCY/cache_control/mixed_keywords_first/: CMakeLists.txt
test/DEPENDENCY/cache_control/mixed_no_keywords_first/: CMakeLists.txt
test/DEPENDENCY/cache_control/same_file_diff_remotes/: CMakeLists.txt
test/DEPENDENCY/cache_control/same_file_diff_revision/: CMakeLists.txt
test/DEPENDENCY/download_check/: CMakeLists.txt
test/DEPENDENCY/download_check/fail/: CMakeLists.txt
test/DEPENDENCY/download_check/file_uri_download/: CMakeLists.txt
test/DEPENDENCY/download_check/git_revision_validation/: CMakeLists.txt
test/DEPENDENCY/download_check/git_uri_download/: CMakeLists.txt
test/DEPENDENCY/download_check/http_uri_download/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/: CMakeLists.txt  keywords.cmake  without_keywords.cmake
test/DEPENDENCY/duplicated_dependency/keywords/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/keywords_same_file_diff_remote/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/keywords_same_file_diff_uri/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/keywords_with_diff_remote/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/keywords_with_diff_revision/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/keywords_with_different_remote/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/mixed_keywords_first/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/mixed_no_keyfords_first/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/mixed_no_keywords_first/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_file_diff_remotes/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_file_diff_revision/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_file_different_remotes/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_remote/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_remote_without_keywords/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/same_with_diff_uri/: CMakeLists.txt
test/DEPENDENCY/duplicated_dependency/without_keywords/: CMakeLists.txt
test/DEPENDENCY/type_check/: CMakeLists.txt
test/DEPENDENCY/type_check/type_archive/: CMakeLists.txt
test/DEPENDENCY/type_check/type_directory/: CMakeLists.txt
test/DEPENDENCY/type_check/type_file/: CMakeLists.txt
test/DEPENDENCY/type_check/type_module/: CMakeLists.txt
test/FILE_DOWNLOAD/: CMakeLists.txt
test/FILE_DOWNLOAD/archive_requirements_test/: CMakeLists.txt
test/FILE_DOWNLOAD/compute_hash/: CMakeLists.txt
test/FILE_DOWNLOAD/http_header_test/: CMakeLists.txt  http_header_download.cmake
test/FILE_DOWNLOAD/resources/: test_file.txt
test/PARSE_ARGUMENTS/: CMakeLists.txt
test/PARSE_ARGUMENTS/test_cases/argument_types/: CMakeLists.txt
test/PARSE_ARGUMENTS/test_cases/basic_functionality/: CMakeLists.txt
test/PARSE_ARGUMENTS/test_cases/cleanup/: CMakeLists.txt  cleanup_test_macros.cmake
test/PARSE_ARGUMENTS/test_cases/complex_scenarios/: CMakeLists.txt
test/PARSE_ARGUMENTS/test_cases/error_conditions/: CMakeLists.txt
test/REQUIRED_ENV/: CMakeLists.txt
test/STORAGE/: CMakeLists.txt
test/TEMPLATE/: CMakeLists.txt
test/TEST_FRAMEWORK/: CMakeLists.txt  README.md
test/TEST_FRAMEWORK/cache_var_functions/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/fail_restore_never_stored/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/force_set_defined/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/force_set_undefined/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/force_unset_defined/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/force_unset_undefined/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/restore_originally_defined/: CMakeLists.txt
test/TEST_FRAMEWORK/cache_var_functions/restore_originally_undefined/: CMakeLists.txt
test/TEST_FRAMEWORK/execution_functions/: CMakeLists.txt
test/TEST_FRAMEWORK/execution_functions/test_invalid_cmake_run/: CMakeLists.txt  test_case_1_caller.cmake  test_case_3_caller.cmake
test/TEST_FRAMEWORK/execution_functions/test_run/: CMakeLists.txt  test_case_2_caller.cmake  test_case_3_caller.cmake
test/TEST_FRAMEWORK/path_functions/: CMakeLists.txt
test/TEST_FRAMEWORK/target_property_functions/: CMakeLists.txt
test/TEST_FRAMEWORK/variable_functions/: CMakeLists.txt
test/test_resources/: README.md  test_resources.cmake  test_resources_download.cmake
(+93 files in other folders)
