 
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMLIB_CACHE_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../")
FIND_PACKAGE(CMLIB)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")

TEST_RUN(ARCHIVE)
TEST_RUN(CACHE)
TEST_RUN(FILE_DOWNLOAD)
TEST_RUN(PARSE_ARGUMENTS)
TEST_RUN(REQUIRED_ENV)
TEST_RUN(DEPENDENCY)
TEST_RUN(COMPONENT)
