 
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMLIB_CACHE_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../")
FIND_PACKAGE(CMLIB)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/test_resources/test_resources.cmake")

TEST_RESOURCES_DOWNLOAD_ENABLE()
TEST_RESOURCES_DOWNLOAD()
TEST_RESOURCES_DOWNLOAD_DISABLE()

TEST_RUN(ARCHIVE)
TEST_RUN(CACHE)
TEST_RUN(FILE_DOWNLOAD)
TEST_RUN(PARSE_ARGUMENTS)
TEST_RUN(REQUIRED_ENV)
TEST_RUN(DEPENDENCY)
TEST_RUN(COMPONENT)
TEST_RUN(TEMPLATE)
