## Main
#
#
#

#
# Some components require different setup in script mode.
# Skip CMAKE_MINIMUM_REQUIRED and PROJECT declarations when in script mode.
#
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
	PROJECT(CMLIB_CACHE_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")

SET(components CMDEF STORAGE CMUTIL CMCONF)

FIND_PACKAGE(CMLIB
	COMPONENTS ${components}
)

FIND_PACKAGE(CMLIB
	COMPONENTS ${components}
)

LIST(POP_FRONT components)

FIND_PACKAGE(CMLIB
	COMPONENTS ${components}
)

CMUTIL_VERSION_SPLIT(outvar 1.4.3)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")

TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/not_defined_component/")
